# sandbox_d3d12

basecamp/: .gitignore  CMakeLists.txt  README.md
basecamp/doc/: d3d12_notes.md
basecamp/ext/assimp/: assimp-vc143-mt.lib  assimp-vc143-mtd.lib
basecamp/ext/dxc/: dxcompiler.lib
basecamp/ext/imgui/: version.txt
basecamp/ext/imgui/src/imgui/backends/: imgui_impl_dx12.h  imgui_impl_win32.h
basecamp/ext/ois/: OIS.lib  OIS_d.lib
basecamp/src/: .clang-format
basecamp/src/common/: CMakeLists.txt  common.cpp.h  common.h  stdafx.h
basecamp/src/common/debug/: debug_output.cpp  debug_output.h  debug_util.h
basecamp/src/common/graphic/: graphic.h  graphic_cpp.h  mesh_data.cpp  mesh_data.h  mesh_data_generator.cpp  mesh_data_generator.h  model_loader.cpp  model_loader.h
basecamp/src/common/helper/: helper.cpp  helper.h  math.h  string_pool.cpp  string_pool.h
basecamp/src/common/input/: input.h
basecamp/src/common/math/: aabb.h
basecamp/src/common/math/directxtk/: SimpleMath.cpp  SimpleMath.h  SimpleMath.inl
basecamp/src/engine_graphic/: CMakeLists.txt  engine.cpp  engine.h  engine_graphic.h  engine_graphic_cpp.h  stdafx.h
basecamp/src/engine_graphic/d3d12/: buffer.h  command_list.cpp  command_list.h  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  frame_resource.cpp  frame_resource.h  graphic_pipeline_state_desc.h  input_layout_desc.cpp  input_layout_desc.h  input_layout_element_desc_consts.h  lib_ray_shader_table.cpp  lib_ray_shader_table.h  lib_ray_technique_instance.cpp  lib_ray_technique_instance.h  mesh_buffer.cpp  mesh_buffer.h  render_lib_ray_technique_instance.cpp  render_lib_ray_technique_instance.h  render_technique_instance.cpp  render_technique_instance.h  resource .cpp  resource.h  resource_manager.cpp  resource_manager.h  resource_state.cpp  resource_state.h  sampler_desc.h  scene_buffer.cpp  scene_buffer.h  shader.h  shader_manager.cpp  shader_manager.h  shader_reflection.cpp  shader_reflection.h
basecamp/src/engine_graphic/d3d12/D3D12MemoryAllocator/: D3D12MemAlloc.h
basecamp/src/engine_graphic/d3d12/dxc/: dxcompiler.lib
basecamp/src/engine_graphic/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
basecamp/src/engine_graphic/imgui/backends/: imgui_impl_dx12.cpp  imgui_impl_win32.cpp
basecamp/src/sandbox/: CMakeLists.txt  app.cpp  app.h  main.cpp  stdafx.h
basecamp/src/sandbox/input/: input_manager.cpp  input_manager.h
basecamp/src/sandbox/world/component/: arcball.cpp  arcball.h  camera.h  components.h
basecamp/src/sandbox/world/entity/: entity.cpp  entity.h
basecamp/src/sandbox/world/system/: systems.cpp  systems.h
basecamp/src/sandbox/world/system/graphic/: frame_pipeline.cpp  frame_pipeline.h  global.cpp  global.h  mesh_novb_renderer.cpp  mesh_novb_renderer.h  mesh_renderer.cpp  mesh_renderer.h  raytrace_renderer.cpp  raytrace_renderer.h  scene_container.cpp  scene_container.h
basecamp/src/sandbox/world/system/graphic/render_pass/: compute_pass_readback_test.cpp  compute_pass_readback_test.h  render_pass_main.cpp  render_pass_main.h
basecamp/src/shaders/: CMakeLists.txt  camera.inc.hlsl  default.ps.hlsl  default.vs.hlsl  default_shared.inc.hlsl  hello_triangle.ps.hlsl  hello_triangle_mesh.vs.hlsl  hlsl_shared_struct.h  mesh.inc.hlsl  mesh.ps.hlsl  mesh.vs.hlsl  mesh_instancing.vs.hlsl  mesh_soup.vs.hlsl  mesh_v2.vs.hlsl  raytrace_simplelighting.ray.hlsl  raytrace_util.hlsl  simple_compute.cs.hlsl  simple_raygen.ray.hlsl  simple_raytracing.ray.hlsl  test.vs.hlsl  triangle.ps.hlsl  triangle.vs.hlsl  util.inc.hlsl  voxelization.hlsl  voxelization.ps.hlsl  voxelization.vs.hlsl
basecamp/src/shaders/test/: bindless_textures.ps.hlsl  bindless_textures.vs.hlsl  single_triangle.ps.hlsl  single_triangle.vs.hlsl
basecamp/src/vulkan_test/: CMakeLists.txt  app.cpp  app.h  main.cpp  main_renderer.cpp  main_renderer.h  stdafx.h
basecamp/src/vulkan_test/gfx_device/: buffer.h  descriptor_pool.cpp  descriptor_pool.h  device.cpp  device.h  frame_resource.cpp  frame_resource.h  gfx_main.cpp  gfx_main.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  technique.cpp  technique.h  technique_instance.cpp  technique_instance.h
basecamp/src/vulkan_test/gfx_device/retired_code/: initialization_helper.cpp  initialization_helper.h
basecamp/src/vulkan_test/gfx_device/vma/: vk_mem_alloc.hpp  vma.cpp  vma.h
